# TMA4280

oving4/: summation.cpp  summation_mpi.cpp  summation_openmp.cpp
oving4/code/: CMakeLists.txt  summation.cpp  summation_mpi.cpp  summation_mpi_openmp.cpp  summation_openmp.cpp
oving4/latex/: .oppgave.lb  oppgave.tex
oving4/mac_build/: CMakeCache.txt  Makefile  cmake_install.cmake
